# osfsc

./: LICENSE  README.md
osfsc/: CMakeLists.txt  icons.qrc  main.cpp  osfsc_en_GB.ts
osfsc/data/: project.cpp  project.h
osfsc/gui/: applicationpaths.cpp  applicationpaths.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  videocontroller.cpp  videocontroller.h
